# litestar-todo

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
scripts/: entry
