[tool.poetry]
name = "litestar-todo"
version = "0.1.0"
description = ""
authors = ["Ryan Palermo <ryanpalermo@neuroflow.com>"]
readme = "README.md"

[tool.poetry.scripts]
app = "litestar.__main__:run_cli"

[tool.poetry.plugins."litestar.commands"]
database = "app.cli:database_management_app"
run-all = "app.cli:run_all_app"
users = "app.cli:user_management_app"
worker = "app.cli:worker_management_app"

[tool.poetry.dependencies]
python = "3.10.4"
litestar = {extras = ["jwt", 'cli', 'redis', 'jinja', 'sqlalchemy', 'structlog', 'pydantic'], version = "2.0.1"}
SQLAlchemy = "^2.0.20"
alembic = "^1.12.0"
pydantic = "^2.3.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
